Establish  connection between two partners Add two REST to show server online users Solve the issues of peer connections